--- a/LR 2/LABA №2/LABA №2/LABA №2.csproj
+++ b/LR 2/LABA №2/LABA №2/LABA №2.csproj
@@ -46,6 +46,7 @@
     <Compile Include="functions_command.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShearchingModuke.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
