--- a/DistanceEducation/DistanceEducation/DistanceEducation.csproj
+++ b/DistanceEducation/DistanceEducation/DistanceEducation.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Phone.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalePhone.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
