--- a/LR 2 NEW/LR 2 NEW/LR 2 NEW.csproj
+++ b/LR 2 NEW/LR 2 NEW/LR 2 NEW.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalisisDateModule.cs" />
+    <Compile Include="catalog.cs" />
+    <Compile Include="Disk.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="userRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
