--- a/MenyClassesApplications/MenyClassesApplications/MenyClassesApplications.csproj
+++ b/MenyClassesApplications/MenyClassesApplications/MenyClassesApplications.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="Storage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
