--- a/MenyClassesApplications/MenyClassesApplications/MenyClassesApplications.csproj
+++ b/MenyClassesApplications/MenyClassesApplications/MenyClassesApplications.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="Report.cs" />
+    <Compile Include="ReportRow.cs" />
     <Compile Include="Storage.cs" />
   </ItemGroup>
   <ItemGroup>
