--- a/FirstWinFormsLib/FirstWinFormsLib/FirstWinFormsLib.csproj
+++ b/FirstWinFormsLib/FirstWinFormsLib/FirstWinFormsLib.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ModelViewLib\ModelViewLib.csproj">
+      <Project>{19196060-85fa-4c70-8b4d-84c594212649}</Project>
+      <Name>ModelViewLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
